8256663: [test] Deprecated use of new Double in jshell ImportTest 8256667: [test] Unexpected warnings in javac test T8074381a
Reviewed-by: lfoltan, mchung